sl4j error logging, styling, various fixes